2003-07-25	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* ide/Makefile.am, network/Makefile.am, rtc/Makefile.am, 
	serial/Makefile.am: Add conditional LIBCHIP.
	Conditionally build include-dirs.

2003-07-25	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* network/if_fxp.c: Replace deprecated b* funcs by mem* funcs.

2003-07-18      Greg Menke <gregory.menke@gsfc.nasa.gov>

	PR 429/bsps
	PR 432/bsps
	* network/elnk.c: Due to a bug in the driver, if multiple packets
	are queued onto an elnk board, the ISR will deadlock the device with
	a tx complete interrupt.  Lighter tx loads are not affected as they
	end up submitting single packets to the device.

2003-07-10	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Remove (Merged into ../configure.ac).
	* Makefile.am, ide/Makefile.am, network/Makefile.am,
	rtc/Makefile.am, serial/Makefile.am:
	Reflect having merged configure.ac into ../configure.ac

2003-06-30	Greg Menke <gregory.menke@gsfc.nasa.gov>


	* network/dec21140.c, network/elnk.c: Update to compile on i386.

2003-06-13	Greg Menke <gregory.menke@gsfc.nasa.gov>

	* network/README.3com: New file missed in previous commit.

2003-06-13	Greg Menke <gregory.menke@gsfc.nasa.gov>

	PR 405/bsps
	PR 393/networking
	* network/dec21140.c: Fix leak also known as PR393.
	* network/elnk.c, network/if_media.h, network/mii.h: New files.
	* network/Makefile.am: Reflect new files.

2003-04-15	Joel Sherrill <joel@OARcorp.com>

	PR 387/rtems_misc
	* ide/ata.c: Removed warning and moved to use of simpler libc routines.
	* ide/ata_internal.h: Added missing newline and end of file.

2003-03-27	Joel Sherrill <joel@OARcorp.com>

	* ide/Makefile.am: ATA code depends upon libchip/ide which is not
	allowed in the cpukit source code since it must be buildable
	independent of any BSP. These files were moved to libchip/ide.
	* ide/ata.c, ide/ata.h, ide/ata_internal.h: New files.

2003-03-25	Thomas Doerfler <Thomas.Doerfler@imd-systems.de>

	PR 368/filesystems