@@ -4,5 +4,5 @@
 
 SUBDIRS = rtc serial network ide
 
-include $(top_srcdir)/../../automake/subdirs.am
-include $(top_srcdir)/../../automake/local.am
+include $(top_srcdir)/automake/subdirs.am
+include $(top_srcdir)/automake/local.am
