@@ -1,3 +1,11 @@
+2003-08-16	Ralf Corsepius <corsepiu@faw.uni-ulm.de>
+
+	Makefile.am: Reflect having moved automake.
+	ide/Makefile.am: Reflect having moved automake.
+	network/Makefile.am: Reflect having moved automake.
+	rtc/Makefile.am: Reflect having moved automake.
+	serial/Makefile.am: Reflect having moved automake.
+
 2003-07-25	Ralf Corsepius <corsepiu@faw.uni-ulm.de>
 
 	* ide/Makefile.am, network/Makefile.am, rtc/Makefile.am, 
